--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.10)
 
-# Версия на основе количества коммитов
+# Версия на основе количества коммитов (только для пакетирования)
 find_package(Git QUIET)
 if(GIT_FOUND)
     execute_process(
@@ -14,12 +14,10 @@ else()
     set(GIT_COMMIT_COUNT "0")
 endif()
 
-set(PATCH_VERSION "${GIT_COMMIT_COUNT}" CACHE INTERNAL "Patch version")
-set(PROJECT_VERSION 1.0.${PATCH_VERSION})
-
+set(PROJECT_VERSION 1.0.${GIT_COMMIT_COUNT})
 project(lab2 VERSION ${PROJECT_VERSION})
 
-# Google Test вместо Boost
+# Google Test
 include(FetchContent)
 FetchContent_Declare(
     googletest
@@ -28,50 +26,39 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-# Конфигурация версии
-configure_file(version.h.in version.h)
-
-# Основная программа (теперь main.cpp)
+# Основная программа
 add_executable(lab2 main.cpp)
-target_link_libraries(lab2 PRIVATE lab2_lib)
-
-# Библиотека с версией
-add_library(lab2_lib lib.cpp)
-target_include_directories(lab2_lib
-    PRIVATE "${CMAKE_BINARY_DIR}"
-)
 
 # Тесты
 add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE gtest_main lab2_lib)
+target_link_libraries(tests PRIVATE gtest_main)
 target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Копирование данных для тестов
 configure_file(ip_filter.tsv ${CMAKE_CURRENT_BINARY_DIR}/ip_filter.tsv COPYONLY)
 
 # Настройки компиляции
-set_target_properties(lab2 lab2_lib tests PROPERTIES
+set_target_properties(lab2 tests PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
 
 if (MSVC)
     target_compile_options(lab2 PRIVATE /W4)
-    target_compile_options(lab2_lib PRIVATE /W4)
     target_compile_options(tests PRIVATE /W4)
 else ()
     target_compile_options(lab2 PRIVATE -Wall -Wextra -pedantic -Werror)
-    target_compile_options(lab2_lib PRIVATE -Wall -Wextra -pedantic -Werror)
     target_compile_options(tests PRIVATE -Wall -Wextra -pedantic -Werror)
 endif()
 
 # Установка
 install(TARGETS lab2 RUNTIME DESTINATION bin)
 
-# Пакетирование
+# Пакетирование (версия только здесь)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_CONTACT student@university.edu)
 
 if(WIN32)
     set(CPACK_GENERATOR ZIP)
